--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 .row > div.col2 {
     text-align: center;
     font-family: B Yekan;
-    font-size: 22px;
+    font-size: 28px;
     font-style: bolder;
     color: whitesmoke;
     padding-top: 2px;
@@ -86,11 +86,23 @@ button.accordion:hover, button.accordion.is-open  {
     background-color: aqua;
 }
 
-@media  and (min-width: 720px) {
-    h1 {
-        font-size: 15px;
-    }
-@media  and (min-width: 320px) {
-    h1 {
+@media  screen and (min-width: 240px){
+    .row > div.col2 {
         font-size: 10px;
+    }
+@media screen and (min-width: 360px){
+    .row > div.col2 {
+        font-size: 12px;
+    }
+    @media  screen and (min-width: 480px){
+    .row > div.col2 {
+        font-size: 14px;
+    }
+        @media  screen and (min-width: 720px){
+    .row > div.col2 {
+        font-size: 16px;
+    }
+            @media  screen and (min-width: 1080px){
+    .row > div.col2 {
+        font-size: 28px;
     }
